Bug 1151804 - Ensure that streams are not prematurely terminated when asyncInit is true. r=lizzard